emoji.output
Terminals unused in grammar

   TFLOAT
   TFLOATYPE
   TTRUE
   TFALSE


Rules useless in parser due to conflicts

   84 $@26: %empty

   87 $@28: %empty

   90 $@30: %empty

   93 $@32: %empty

   96 $@34: %empty

   99 $@36: %empty

  102 $@38: %empty

  105 $@40: %empty

  180 $@88: %empty

  182 $@89: %empty


State 2 conflicts: 1 reduce/reduce
State 49 conflicts: 8 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt
    3      | stmts stmt

    4 stmt: var_decl TSEP
    5     | const_decl TSEP
    6     | assignment TSEP
    7     | if_cond
    8     | if_else_cond
    9     | while_loop
   10     | for_loop
   11     | switch_statemnet
   12     | func_decl
   13     | func_call
   14     | TPASS TSEP
   15     | error TSEP

   16 $@1: %empty

   17 func_decl: TINTYPE TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@1 stmts TRBRACE

   18 $@2: %empty

   19 func_decl: TSTRINGTYPE TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@2 stmts TRBRACE

   20 $@3: %empty

   21 func_decl: TBOOLTYPE TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@3 stmts TRBRACE

   22 $@4: %empty

   23 func_decl: TVOID TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@4 stmts TRBRACE

   24 args: %empty
   25     | TINTYPE
   26     | TSTRINGTYPE
   27     | TBOOLTYPE
   28     | TVOID
   29     | args TCOMMA TINTYPE
   30     | args TCOMMA TSTRINGTYPE
   31     | args TCOMMA TBOOLTYPE
   32     | args TCOMMA TVOID

   33 func_call: TIDENTIFIER TLPAREN call_args TRPAREN TSEP

   34 call_args: %empty
   35          | expr
   36          | call_args TCOMMA expr

   37 $@5: %empty

   38 switch_statemnet: TSWITCH TLPAREN TIDENTIFIER TRPAREN TLBRACE $@5 case_blocks TRBRACE

   39 case_blocks: case_stmt
   40            | case_blocks case_stmt

   41 case_stmt: TCASE TINTEGER TCOLON stmts TSEP
   42          | TCASE TINTEGER TCOLON TBREAK TSEP
   43          | TDEFAULT TCOLON stmts TSEP
   44          | TDEFAULT TCOLON TBREAK TSEP
   45          | TBREAK TSEP

   46 $@6: %empty

   47 for_loop: TFOR TLPAREN optexpr TSEP optexpr TSEP optexpr TRPAREN TLBRACE $@6 stmts TRBRACE

   48 $@7: %empty

   49 while_loop: TWHILE TLPAREN expr TRPAREN TLBRACE $@7 stmts TRBRACE

   50 $@8: %empty

   51 if_cond: TIF TLPAREN expr TRPAREN TLBRACE $@8 stmts TRBRACE

   52 $@9: %empty

   53 if_else_cond: if_cond TELSE TLBRACE $@9 stmts TRBRACE

   54 const_decl: TCONST TINTYPE TIDENTIFIER TEQUAL arithmetic
   55           | TCONST TSTRINGTYPE TIDENTIFIER TEQUAL TSTRING
   56           | TCONST TBOOLTYPE TIDENTIFIER TEQUAL expr

   57 var_decl: TINTYPE TIDENTIFIER
   58         | TSTRINGTYPE TIDENTIFIER
   59         | TBOOLTYPE TIDENTIFIER

   60 $@10: %empty

   61 $@11: %empty

   62 expr: TIDENTIFIER $@10 TCEQ $@11 TINTEGER

   63 $@12: %empty

   64 $@13: %empty

   65 expr: TIDENTIFIER $@12 TCNE $@13 TINTEGER

   66 $@14: %empty

   67 $@15: %empty

   68 expr: TIDENTIFIER $@14 TCLT $@15 TINTEGER

   69 $@16: %empty

   70 $@17: %empty

   71 expr: TIDENTIFIER $@16 TCLE $@17 TINTEGER

   72 $@18: %empty

   73 $@19: %empty

   74 expr: TIDENTIFIER $@18 TCGT $@19 TINTEGER

   75 $@20: %empty

   76 $@21: %empty

   77 expr: TIDENTIFIER $@20 TCGE $@21 TINTEGER

   78 $@22: %empty

   79 $@23: %empty

   80 expr: TIDENTIFIER $@22 TAND $@23 TINTEGER

   81 $@24: %empty

   82 $@25: %empty

   83 expr: TIDENTIFIER $@24 TOR $@25 TINTEGER

   84 $@26: %empty

   85 $@27: %empty

   86 expr: TIDENTIFIER $@26 TCEQ $@27 expr

   87 $@28: %empty

   88 $@29: %empty

   89 expr: TIDENTIFIER $@28 TCNE $@29 expr

   90 $@30: %empty

   91 $@31: %empty

   92 expr: TIDENTIFIER $@30 TCLT $@31 expr

   93 $@32: %empty

   94 $@33: %empty

   95 expr: TIDENTIFIER $@32 TCLE $@33 expr

   96 $@34: %empty

   97 $@35: %empty

   98 expr: TIDENTIFIER $@34 TCGT $@35 expr

   99 $@36: %empty

  100 $@37: %empty

  101 expr: TIDENTIFIER $@36 TCGE $@37 expr

  102 $@38: %empty

  103 $@39: %empty

  104 expr: TIDENTIFIER $@38 TAND $@39 expr

  105 $@40: %empty

  106 $@41: %empty

  107 expr: TIDENTIFIER $@40 TOR $@41 expr

  108 $@42: %empty

  109 $@43: %empty

  110 expr: expr TCEQ $@42 TIDENTIFIER $@43

  111 $@44: %empty

  112 $@45: %empty

  113 expr: expr TCNE $@44 TIDENTIFIER $@45

  114 $@46: %empty

  115 $@47: %empty

  116 expr: expr TCLT $@46 TIDENTIFIER $@47

  117 $@48: %empty

  118 $@49: %empty

  119 expr: expr TCLE $@48 TIDENTIFIER $@49

  120 $@50: %empty

  121 $@51: %empty

  122 expr: expr TCGT $@50 TIDENTIFIER $@51

  123 $@52: %empty

  124 $@53: %empty

  125 expr: expr TCGE $@52 TIDENTIFIER $@53

  126 $@54: %empty

  127 $@55: %empty

  128 expr: expr TAND $@54 TIDENTIFIER $@55

  129 $@56: %empty

  130 $@57: %empty

  131 expr: expr TOR $@56 TIDENTIFIER $@57
  132     | func_call

  133 $@58: %empty

  134 expr: TNOT $@58 TLPAREN expr TRPAREN

  135 $@59: %empty

  136 $@60: %empty

  137 arithmetic: TIDENTIFIER $@59 TPLUS $@60 arithmetic

  138 $@61: %empty

  139 $@62: %empty

  140 arithmetic: TIDENTIFIER $@61 TMINUS $@62 arithmetic

  141 $@63: %empty

  142 $@64: %empty

  143 arithmetic: TIDENTIFIER $@63 TMUL $@64 arithmetic

  144 $@65: %empty

  145 $@66: %empty

  146 arithmetic: TIDENTIFIER $@65 TDIV $@66 arithmetic

  147 $@67: %empty

  148 $@68: %empty

  149 arithmetic: TINTEGER $@67 TPLUS $@68 arithmetic

  150 $@69: %empty

  151 $@70: %empty

  152 arithmetic: TINTEGER $@69 TMINUS $@70 arithmetic

  153 $@71: %empty

  154 $@72: %empty

  155 arithmetic: TINTEGER $@71 TMUL $@72 arithmetic

  156 $@73: %empty

  157 $@74: %empty

  158 arithmetic: TINTEGER $@73 TDIV $@74 arithmetic
  159           | TLPAREN arithmetic TRPAREN

  160 $@75: %empty

  161 $@76: %empty

  162 arithmetic: TMINUS $@75 TINTEGER $@76

  163 $@77: %empty

  164 $@78: %empty

  165 arithmetic: TMINUS $@77 TIDENTIFIER $@78

  166 $@79: %empty

  167 $@80: %empty

  168 arithmetic: TIDENTIFIER $@79 TINC $@80

  169 $@81: %empty

  170 $@82: %empty

  171 arithmetic: TIDENTIFIER $@81 TDEC $@82

  172 $@83: %empty

  173 arithmetic: TINTEGER $@83

  174 $@84: %empty

  175 arithmetic: TIDENTIFIER $@84

  176 $@85: %empty

  177 $@86: %empty

  178 $@87: %empty

  179 assignment: TIDENTIFIER $@85 TEQUAL TSTRING $@86 $@87

  180 $@88: %empty

  181 assignment: TIDENTIFIER $@88 TEQUAL expr

  182 $@89: %empty

  183 assignment: TIDENTIFIER $@89 TEQUAL arithmetic

  184 optexpr: expr
  185        | %empty


Terminals, with rules where they appear

$end (0) 0
error (256) 15
TIDENTIFIER (258) 17 19 21 23 33 38 54 55 56 57 58 59 62 65 68 71 74
    77 80 83 86 89 92 95 98 101 104 107 110 113 116 119 122 125 128
    131 137 140 143 146 165 168 171 175 179 181 183
TSTRING (259) 55 179
TINTEGER (260) 41 42 62 65 68 71 74 77 80 83 149 152 155 158 162 173
TFLOAT (261)
TCONST (262) 54 55 56
TIF (263) 51
TELSE (264) 53
TINTYPE (265) 17 25 29 54 57
TSTRINGTYPE (266) 19 26 30 55 58
TFLOATYPE (267)
TFOR (268) 47
TWHILE (269) 49
TBOOLTYPE (270) 21 27 31 56 59
TPASS (271) 14
TVOID (272) 23 28 32
TCEQ (273) 62 86 110
TCNE (274) 65 89 113
TCLT (275) 68 92 116
TCLE (276) 71 95 119
TCGT (277) 74 98 122
TCGE (278) 77 101 125
TEQUAL (279) 54 55 56 179 181 183
TTRUE (280)
TFALSE (281)
TSWITCH (282) 38
TDEFAULT (283) 43 44
TCASE (284) 41 42
TBREAK (285) 42 44 45
TLPAREN (286) 17 19 21 23 33 38 47 49 51 134 159
TRPAREN (287) 17 19 21 23 33 38 47 49 51 134 159
TLBRACE (288) 17 19 21 23 38 47 49 51 53
TRBRACE (289) 17 19 21 23 38 47 49 51 53
TCOMMA (290) 29 30 31 32 36
TSEP (291) 4 5 6 14 15 33 41 42 43 44 45 47
TCOLON (292) 41 42 43 44
TPLUS (293) 137 149
TMINUS (294) 140 152 162 165
TMUL (295) 143 155
TDIV (296) 146 158
TINC (297) 168
TDEC (298) 171
TAND (299) 80 104 128
TOR (300) 83 107 131
TNOT (301) 134


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
stmts (49)
    on left: 2 3, on right: 1 3 17 19 21 23 41 43 47 49 51 53
stmt (50)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 2 3
func_decl (51)
    on left: 17 19 21 23, on right: 12
$@1 (52)
    on left: 16, on right: 17
$@2 (53)
    on left: 18, on right: 19
$@3 (54)
    on left: 20, on right: 21
$@4 (55)
    on left: 22, on right: 23
args (56)
    on left: 24 25 26 27 28 29 30 31 32, on right: 17 19 21 23 29 30
    31 32
func_call (57)
    on left: 33, on right: 13 132
call_args (58)
    on left: 34 35 36, on right: 33 36
switch_statemnet (59)
    on left: 38, on right: 11
$@5 (60)
    on left: 37, on right: 38
case_blocks (61)
    on left: 39 40, on right: 38 40
case_stmt (62)
    on left: 41 42 43 44 45, on right: 39 40
for_loop (63)
    on left: 47, on right: 10
$@6 (64)
    on left: 46, on right: 47
while_loop (65)
    on left: 49, on right: 9
$@7 (66)
    on left: 48, on right: 49
if_cond (67)
    on left: 51, on right: 7 53
$@8 (68)
    on left: 50, on right: 51
if_else_cond (69)
    on left: 53, on right: 8
$@9 (70)
    on left: 52, on right: 53
const_decl (71)
    on left: 54 55 56, on right: 5
var_decl (72)
    on left: 57 58 59, on right: 4
expr (73)
    on left: 62 65 68 71 74 77 80 83 86 89 92 95 98 101 104 107 110
    113 116 119 122 125 128 131 132 134, on right: 35 36 49 51 56 86
    89 92 95 98 101 104 107 110 113 116 119 122 125 128 131 134 181
    184
$@10 (74)
    on left: 60, on right: 62
$@11 (75)
    on left: 61, on right: 62
$@12 (76)
    on left: 63, on right: 65
$@13 (77)
    on left: 64, on right: 65
$@14 (78)
    on left: 66, on right: 68
$@15 (79)
    on left: 67, on right: 68
$@16 (80)
    on left: 69, on right: 71
$@17 (81)
    on left: 70, on right: 71
$@18 (82)
    on left: 72, on right: 74
$@19 (83)
    on left: 73, on right: 74
$@20 (84)
    on left: 75, on right: 77
$@21 (85)
    on left: 76, on right: 77
$@22 (86)
    on left: 78, on right: 80
$@23 (87)
    on left: 79, on right: 80
$@24 (88)
    on left: 81, on right: 83
$@25 (89)
    on left: 82, on right: 83
$@26 (90)
    on left: 84, on right: 86
$@27 (91)
    on left: 85, on right: 86
$@28 (92)
    on left: 87, on right: 89
$@29 (93)
    on left: 88, on right: 89
$@30 (94)
    on left: 90, on right: 92
$@31 (95)
    on left: 91, on right: 92
$@32 (96)
    on left: 93, on right: 95
$@33 (97)
    on left: 94, on right: 95
$@34 (98)
    on left: 96, on right: 98
$@35 (99)
    on left: 97, on right: 98
$@36 (100)
    on left: 99, on right: 101
$@37 (101)
    on left: 100, on right: 101
$@38 (102)
    on left: 102, on right: 104
$@39 (103)
    on left: 103, on right: 104
$@40 (104)
    on left: 105, on right: 107
$@41 (105)
    on left: 106, on right: 107
$@42 (106)
    on left: 108, on right: 110
$@43 (107)
    on left: 109, on right: 110
$@44 (108)
    on left: 111, on right: 113
$@45 (109)
    on left: 112, on right: 113
$@46 (110)
    on left: 114, on right: 116
$@47 (111)
    on left: 115, on right: 116
$@48 (112)
    on left: 117, on right: 119
$@49 (113)
    on left: 118, on right: 119
$@50 (114)
    on left: 120, on right: 122
$@51 (115)
    on left: 121, on right: 122
$@52 (116)
    on left: 123, on right: 125
$@53 (117)
    on left: 124, on right: 125
$@54 (118)
    on left: 126, on right: 128
$@55 (119)
    on left: 127, on right: 128
$@56 (120)
    on left: 129, on right: 131
$@57 (121)
    on left: 130, on right: 131
$@58 (122)
    on left: 133, on right: 134
arithmetic (123)
    on left: 137 140 143 146 149 152 155 158 159 162 165 168 171 173
    175, on right: 54 137 140 143 146 149 152 155 158 159 183
$@59 (124)
    on left: 135, on right: 137
$@60 (125)
    on left: 136, on right: 137
$@61 (126)
    on left: 138, on right: 140
$@62 (127)
    on left: 139, on right: 140
$@63 (128)
    on left: 141, on right: 143
$@64 (129)
    on left: 142, on right: 143
$@65 (130)
    on left: 144, on right: 146
$@66 (131)
    on left: 145, on right: 146
$@67 (132)
    on left: 147, on right: 149
$@68 (133)
    on left: 148, on right: 149
$@69 (134)
    on left: 150, on right: 152
$@70 (135)
    on left: 151, on right: 152
$@71 (136)
    on left: 153, on right: 155
$@72 (137)
    on left: 154, on right: 155
$@73 (138)
    on left: 156, on right: 158
$@74 (139)
    on left: 157, on right: 158
$@75 (140)
    on left: 160, on right: 162
$@76 (141)
    on left: 161, on right: 162
$@77 (142)
    on left: 163, on right: 165
$@78 (143)
    on left: 164, on right: 165
$@79 (144)
    on left: 166, on right: 168
$@80 (145)
    on left: 167, on right: 168
$@81 (146)
    on left: 169, on right: 171
$@82 (147)
    on left: 170, on right: 171
$@83 (148)
    on left: 172, on right: 173
$@84 (149)
    on left: 174, on right: 175
assignment (150)
    on left: 179 181 183, on right: 6
$@85 (151)
    on left: 176, on right: 179
$@86 (152)
    on left: 177, on right: 179
$@87 (153)
    on left: 178, on right: 179
$@88 (154)
    on left: 180, on right: 181
$@89 (155)
    on left: 182, on right: 183
optexpr (156)
    on left: 184 185, on right: 47


State 0

    0 $accept: . program $end
    1 program: . stmts
    2 stmts: . stmt
    3      | . stmts stmt
    4 stmt: . var_decl TSEP
    5     | . const_decl TSEP
    6     | . assignment TSEP
    7     | . if_cond
    8     | . if_else_cond
    9     | . while_loop
   10     | . for_loop
   11     | . switch_statemnet
   12     | . func_decl
   13     | . func_call
   14     | . TPASS TSEP
   15     | . error TSEP
   17 func_decl: . TINTYPE TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@1 stmts TRBRACE
   19          | . TSTRINGTYPE TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@2 stmts TRBRACE
   21          | . TBOOLTYPE TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@3 stmts TRBRACE
   23          | . TVOID TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@4 stmts TRBRACE
   33 func_call: . TIDENTIFIER TLPAREN call_args TRPAREN TSEP
   38 switch_statemnet: . TSWITCH TLPAREN TIDENTIFIER TRPAREN TLBRACE $@5 case_blocks TRBRACE
   47 for_loop: . TFOR TLPAREN optexpr TSEP optexpr TSEP optexpr TRPAREN TLBRACE $@6 stmts TRBRACE
   49 while_loop: . TWHILE TLPAREN expr TRPAREN TLBRACE $@7 stmts TRBRACE
   51 if_cond: . TIF TLPAREN expr TRPAREN TLBRACE $@8 stmts TRBRACE
   53 if_else_cond: . if_cond TELSE TLBRACE $@9 stmts TRBRACE
   54 const_decl: . TCONST TINTYPE TIDENTIFIER TEQUAL arithmetic
   55           | . TCONST TSTRINGTYPE TIDENTIFIER TEQUAL TSTRING
   56           | . TCONST TBOOLTYPE TIDENTIFIER TEQUAL expr
   57 var_decl: . TINTYPE TIDENTIFIER
   58         | . TSTRINGTYPE TIDENTIFIER
   59         | . TBOOLTYPE TIDENTIFIER
  179 assignment: . TIDENTIFIER $@85 TEQUAL TSTRING $@86 $@87
  181           | . TIDENTIFIER $@88 TEQUAL expr
  183           | . TIDENTIFIER $@89 TEQUAL arithmetic

    error        shift, and go to state 1
    TIDENTIFIER  shift, and go to state 2
    TCONST       shift, and go to state 3
    TIF          shift, and go to state 4
    TINTYPE      shift, and go to state 5
    TSTRINGTYPE  shift, and go to state 6
    TFOR         shift, and go to state 7
    TWHILE       shift, and go to state 8
    TBOOLTYPE    shift, and go to state 9
    TPASS        shift, and go to state 10
    TVOID        shift, and go to state 11
    TSWITCH      shift, and go to state 12

    program           go to state 13
    stmts             go to state 14
    stmt              go to state 15
    func_decl         go to state 16
    func_call         go to state 17
    switch_statemnet  go to state 18
    for_loop          go to state 19
    while_loop        go to state 20
    if_cond           go to state 21
    if_else_cond      go to state 22
    const_decl        go to state 23
    var_decl          go to state 24
    assignment        go to state 25


State 1

   15 stmt: error . TSEP

    TSEP  shift, and go to state 26


State 2

   33 func_call: TIDENTIFIER . TLPAREN call_args TRPAREN TSEP
  176 $@85: . %empty  [TEQUAL]
  179 assignment: TIDENTIFIER . $@85 TEQUAL TSTRING $@86 $@87
  180 $@88: . %empty  [TEQUAL]
  181 assignment: TIDENTIFIER . $@88 TEQUAL expr
  182 $@89: . %empty  [TEQUAL]
  183 assignment: TIDENTIFIER . $@89 TEQUAL arithmetic

    TLPAREN  shift, and go to state 27

    TEQUAL    reduce using rule 176 ($@85)
    TEQUAL    [reduce using rule 180 ($@88)]
    TEQUAL    [reduce using rule 182 ($@89)]
    $default  reduce using rule 176 ($@85)

    $@85  go to state 28
    $@88  go to state 29
    $@89  go to state 30


State 3

   54 const_decl: TCONST . TINTYPE TIDENTIFIER TEQUAL arithmetic
   55           | TCONST . TSTRINGTYPE TIDENTIFIER TEQUAL TSTRING
   56           | TCONST . TBOOLTYPE TIDENTIFIER TEQUAL expr

    TINTYPE      shift, and go to state 31
    TSTRINGTYPE  shift, and go to state 32
    TBOOLTYPE    shift, and go to state 33


State 4

   51 if_cond: TIF . TLPAREN expr TRPAREN TLBRACE $@8 stmts TRBRACE

    TLPAREN  shift, and go to state 34


State 5

   17 func_decl: TINTYPE . TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@1 stmts TRBRACE
   57 var_decl: TINTYPE . TIDENTIFIER

    TIDENTIFIER  shift, and go to state 35


State 6

   19 func_decl: TSTRINGTYPE . TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@2 stmts TRBRACE
   58 var_decl: TSTRINGTYPE . TIDENTIFIER

    TIDENTIFIER  shift, and go to state 36


State 7

   47 for_loop: TFOR . TLPAREN optexpr TSEP optexpr TSEP optexpr TRPAREN TLBRACE $@6 stmts TRBRACE

    TLPAREN  shift, and go to state 37


State 8

   49 while_loop: TWHILE . TLPAREN expr TRPAREN TLBRACE $@7 stmts TRBRACE

    TLPAREN  shift, and go to state 38


State 9

   21 func_decl: TBOOLTYPE . TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@3 stmts TRBRACE
   59 var_decl: TBOOLTYPE . TIDENTIFIER

    TIDENTIFIER  shift, and go to state 39


State 10

   14 stmt: TPASS . TSEP

    TSEP  shift, and go to state 40


State 11

   23 func_decl: TVOID . TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@4 stmts TRBRACE

    TIDENTIFIER  shift, and go to state 41


State 12

   38 switch_statemnet: TSWITCH . TLPAREN TIDENTIFIER TRPAREN TLBRACE $@5 case_blocks TRBRACE

    TLPAREN  shift, and go to state 42


State 13

    0 $accept: program . $end

    $end  shift, and go to state 43


State 14

    1 program: stmts .  [$end]
    3 stmts: stmts . stmt
    4 stmt: . var_decl TSEP
    5     | . const_decl TSEP
    6     | . assignment TSEP
    7     | . if_cond
    8     | . if_else_cond
    9     | . while_loop
   10     | . for_loop
   11     | . switch_statemnet
   12     | . func_decl
   13     | . func_call
   14     | . TPASS TSEP
   15     | . error TSEP
   17 func_decl: . TINTYPE TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@1 stmts TRBRACE
   19          | . TSTRINGTYPE TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@2 stmts TRBRACE
   21          | . TBOOLTYPE TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@3 stmts TRBRACE
   23          | . TVOID TIDENTIFIER TLPAREN args TRPAREN TLBRACE $@4 stmts TRBRACE
   33 func_call: . TIDENTIFIER TLPAREN call_args TRPAREN TSEP
   38 switch_statemnet: . TSWITCH TLPAREN TIDENTIFIER TRPAREN TLBRACE $@5 case_blocks TRBRACE
   47 for_loop: . TFOR TLPAREN optexpr TSEP optexpr TSEP optexpr TRPAREN TLBRACE $@6 stmts TRBRACE
   49 while_loop: . TWHILE TLPAREN expr TRPAREN TLBRACE $@7 stmts TRBRACE
   51 if_cond: . TIF TLPAREN expr TRPAREN TLBRACE $@8 stmts TRBRACE
   53 if_else_cond: . if_cond TELSE TLBRACE $@9 stmts TRBRACE
   54 const_decl: . TCONST TINTYPE TIDENTIFIER TEQUAL arithmetic
   55           | . TCONST TSTRINGTYPE TIDENTIFIER TEQUAL TSTRING
   56           | . TCONST TBOOLTYPE TIDENTIFIER TEQUAL expr
   57 var_decl: . TINTYPE TIDENTIFIER
   58         | . TSTRINGTYPE TIDENTIFIER
   59         | . TBOOLTYPE TIDENTIFIER
  179 assignment: . TIDENTIFIER $@85 TEQUAL TSTRING $@86 $@87
  181           | . TIDENTIFIER $@88 TEQUAL expr
  183           | . TIDENTIFIER $@89 TEQUAL arithmetic

    error        shift, and go to state 1
    TIDENTIFIER  shift, and go to state 2
    TCONST       shift, and go to state 3
    TIF          shift, and go to state 4
    TINTYPE      shift, and go to state 5
    TSTRINGTYPE  shift, and go to state 6
    TFOR         shift, and go to state 7
    TWHILE       shift, and go to state 8
    TBOOLTYPE    shift, and go to state 9
    TPASS        shift, and go to state 10
    TVOID        shift, and go to state 11
    TSWITCH      shift, and go to state 12

    $end  reduce using rule 1 (program)

    stmt              go to state 44
    func_decl         go to state 16
    func_call         go to state 17
    switch_statemnet  go to state 18
    for_loop          go to state 19
    while_loop        go to state 20
    if_cond           go to state 21
    if_else_cond      go to state 22
    const_decl        go to state 23
    var_decl          go to state 24
    assignment        go to state 25


State 15

    2 stmts: stmt .

    $default  reduce using rule 2 (stmts)


State 16

   12 stmt: func_decl .

    $default  reduce using rule 12 (stmt)


State 17

   13 stmt: func_call .

    $default  reduce using rule 13 (stmt)


State 18

   11 stmt: switch_statemnet .

    $default  reduce using rule 11 (stmt)


State 19

   10 stmt: for_loop .

    $default  reduce using rule 10 (stmt)


State 20

    9 stmt: while_loop .

    $default  reduce using rule 9 (stmt)


State 21

    7 stmt: if_cond .  [$end, error, TIDENTIFIER, TCONST, TIF, TINTYPE, TSTRINGTYPE, TFOR, TWHILE, TBOOLTYPE, TPASS, TVOID, TSWITCH, TRBRACE, TSEP]
   53 if_else_cond: if_cond . TELSE TLBRACE $@9 stmts TRBRACE

    TELSE  shift, and go to state 45

    $default  reduce using rule 7 (stmt)


State 22

    8 stmt: if_else_cond .

    $default  reduce using rule 8 (stmt)


State 23

    5 stmt: const_decl . TSEP

    TSEP  shift, and go to state 46


State 24

    4 stmt: var_decl . TSEP

    TSEP  shift, and go to state 47


State 25

    6 stmt: assignment . TSEP

    TSEP  shift, and go to state 48


State 26

   15 stmt: error TSEP .

    $default  reduce using rule 15 (stmt)


State 27

   33 func_call: . TIDENTIFIER TLPAREN call_args TRPAREN TSEP
   33          | TIDENTIFIER TLPAREN . call_args TRPAREN TSEP
   34 call_args: . %empty  [TRPAREN, TCOMMA]
   35          | . expr
   36          | . call_args TCOMMA expr
   62 expr: . TIDENTIFIER $@10 TCEQ $@11 TINTEGER
   65     | . TIDENTIFIER $@12 TCNE $@13 TINTEGER
   68     | . TIDENTIFIER $@14 TCLT $@15 TINTEGER
   71     | . TIDENTIFIER $@16 TCLE $@17 TINTEGER
   74     | . TIDENTIFIER $@18 TCGT $@19 TINTEGER
   77     | . TIDENTIFIER $@20 TCGE $@21 TINTEGER
   80     | . TIDENTIFIER $@22 TAND $@23 TINTEGER
   83     | . TIDENTIFIER $@24 TOR $@25 TINTEGER
   86     | . TIDENTIFIER $@26 TCEQ $@27 expr
   89     | . TIDENTIFIER $@28 TCNE $@29 expr
   92     | . TIDENTIFIER $@30 TCLT $@31 expr
   95     | . TIDENTIFIER $@32 TCLE $@33 expr
   98     | . TIDENTIFIER $@34 TCGT $@35 expr
  101     | . TIDENTIFIER $@36 TCGE $@37 expr
  104     | . TIDENTIFIER $@38 TAND $@39 expr
  107     | . TIDENTIFIER $@40 TOR $@41 expr
  110     | . expr TCEQ $@42 TIDENTIFIER $@43
  113     | . expr TCNE $@44 TIDENTIFIER $@45
  116     | . expr TCLT $@46 TIDENTIFIER $@47
  119     | . expr TCLE $@48 TIDENTIFIER $@49
  122     | . expr TCGT $@50 TIDENTIFIER $@51
  125     | . expr TCGE $@52 TIDENTIFIER $@53
  128     | . expr TAND $@54 TIDENTIFIER $@55
  131     | . expr TOR $@56 TIDENTIFIER $@57
  132     | . func_call
  134     | . TNOT $@58 TLPAREN expr TRPAREN

    TIDENTIFIER  shift, and go to state 49
    TNOT         shift, and go to state 50

    $default  reduce using rule 34 (call_args)

    func_call  go to state 51
    call_args  go to state 52
    expr       go to state 53


State 28

  179 assignment: TIDENTIFIER $@85 . TEQUAL TSTRING $@86 $@87

    TEQUAL  shift, and go to state 54


State 29

  181 assignment: TIDENTIFIER $@88 . TEQUAL expr

    TEQUAL  shift, and go to state 55


State 30

  183 assignment: TIDENTIFIER $@89 . TEQUAL arithmetic

    TEQUAL  shift, and go to state 56


State 31

   54 const_decl: TCONST TINTYPE . TIDENTIFIER TEQUAL arithmetic

    TIDENTIFIER  shift, and go to state 57


State 32

   55 const_decl: TCONST TSTRINGTYPE . TIDENTIFIER TEQUAL TSTRING

    TIDENTIFIER  shift, and go to state 58


State 33

   56 const_decl: TCONST TBOOLTYPE . TIDENTIFIER TEQUAL expr

    TIDENTIFIER  shift, and go to state 59


State 34

   33 func_call: . TIDENTIFIER TLPAREN call_args TRPAREN TSEP
   51 if_cond: TIF TLPAREN . expr TRPAREN TLBRACE $@8 stmts TRBRACE
   62 expr: . TIDENTIFIER $@10 TCEQ $@11 TINTEGER
   65     | . TIDENTIFIER $@12 TCNE $@13 TINTEGER
   68     | . TIDENTIFIER $@14 TCLT $@15 TINTEGER
   71     | . TIDENTIFIER $@16 TCLE $@17 TINTEGER
   74     | . TIDENTIFIER $@18 TCGT $@19 TINTEGER
   77     | . TIDENTIFIER $@20 TCGE $@21 TINTEGER
   80     | . TIDENTIFIER $@22 TAND $@23 TINTEGER
   83     | . TIDENTIFIER $@24 TOR $@25 TINTEGER
   86     | . TIDENTIFIER $@26 TCEQ $@27 expr
   89     | . TIDENTIFIER $@28 TCNE $@29 expr
   92     | . TIDENTIFIER $@30 TCLT $@31 expr
   95     | . TIDENTIFIER $@32 TCLE $@33 expr
   98     | . TIDENTIFIER $@34 TCGT $@35 expr
  101     | . TIDENTIFIER $@36 TCGE $@37 expr
  104     | . TIDENTIFIER $@38 TAND $@39 expr
  107     | . TIDENTIFIER $@40 TOR $@41 expr
  110     | . expr TCEQ $@42 TIDENTIFIER $@43
  113     | . expr TCNE $@44 TIDENTIFIER $@45
  116     | . expr TCLT $@46 TIDENTIFIER $@47
  119     | . expr TCLE $@48 TIDENTIFIER $@49
  122     | . expr TCGT $@50 TIDENTIFIER $@51
  125     | . expr TCGE $@52 TIDENTIFIER $@53
  128     | . expr TAND $@54 TIDENTIFIER $@55
  131     | . expr TOR $@56 TIDENTIFIER $@57
  132     | . func_call
  134     | . TNOT $@58 TLPAREN expr TRPAREN

    TIDENTIFIER  shift, and go to state 49
    TNOT         shift, and go to state 50

    func_call  go to state 51
    expr       go to state 60


State 35

   17 func_decl: TINTYPE TIDENTIFIER . TLPAREN args TRPAREN TLBRACE $@1 stmts TRBRACE
   57 var_decl: TINTYPE TIDENTIFIER .  [TSEP]

    TLPAREN  shift, and go to state 61

    $default  reduce using rule 57 (var_decl)


State 36

   19 func_decl: TSTRINGTYPE TIDENTIFIER . TLPAREN args TRPAREN TLBRACE $@2 stmts TRBRACE
   58 var_decl: TSTRINGTYPE TIDENTIFIER .  [TSEP]

    TLPAREN  shift, and go to state 62

    $default  reduce using rule 58 (var_decl)


State 37

   33 func_call: . TIDENTIFIER TLPAREN call_args TRPAREN TSEP
   47 for_loop: TFOR TLPAREN . optexpr TSEP optexpr TSEP optexpr TRPAREN TLBRACE $@6 stmts TRBRACE
   62 expr: . TIDENTIFIER $@10 TCEQ $@11 TINTEGER
   65     | . TIDENTIFIER $@12 TCNE $@13 TINTEGER
   68     | . TIDENTIFIER $@14 TCLT $@15 TINTEGER
   71     | . TIDENTIFIER $@16 TCLE $@17 TINTEGER
   74     | . TIDENTIFIER $@18 TCGT $@19 TINTEGER
   77     | . TIDENTIFIER $@20 TCGE $@21 TINTEGER
